Move image to rails pipeline

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,29 +6,30 @@
 <!--=== Slider ===-->
 <div id="sequence-theme" class="sequence-inner">
     <div id="sequence">
-        <img class="prev" src="assets/plugins/horizontal-parallax/bt-prev1.png" alt="Previous" />
-        <img class="next" src="assets/plugins/horizontal-parallax/bt-next1.png" alt="Next" />
+        <%= image_tag("plugins/horizontal-parallax/bt-prev1.png", class:"prev", alt:"Previous") %>
+        <%= image_tag("plugins/horizontal-parallax/bt-next1.png", class:"next", alt:"Next") %>
+        
         <ul>
             <li class="animate-in">
                 <div class="info">
-                    <h2>Quicket turnaround</h2>
+                    <h2>Quickest turnaround</h2>
                     <p><strong>24 hour</strong> service guaranteed for under 6,000 words</p>
                 </div>
-                <img class="balloon" src="assets/plugins/horizontal-parallax/clock2.png" alt="Clock" />
+                <%= image_tag("plugins/horizontal-parallax/clock2.png", class: "balloon", alt: "Clock") %>
             </li>
             <li>
                 <div class="info">
                     <h2>Experienced Proofreaders</h2>
                     <p>Natural English Speaking professionals from top universities</p>
                 </div>
-                <img class="balloon" src="assets/plugins/horizontal-parallax/oxford-dictionary1.png" alt="Aeroplane" />
+                <%= image_tag("plugins/horizontal-parallax/oxford-dictionary1.png", class: "balloon", alt: "Dictionaries") %>
             </li>            
             <li>
                 <div class="info">
                     <h2>Great value</h2>
                     <p>Proofreading from only £9.50 per 1,000 words</p>
                 </div>
-                <img class="kite" src="assets/plugins/horizontal-parallax/kite.png" alt="Kite" />
+                <%= image_tag("plugins/horizontal-parallax/kite.png", class: "kite", alt: "Kite") %>
             </li>
         </ul>
     </div>
@@ -88,7 +89,7 @@
             <div class="headline"><h2>Our Proofreading Services</h2></div>
             <div class="row">
                 <div class="col-sm-4">
-                    <img class="img-responsive margin-bottom-20" src="assets/main/6.jpg" alt="" />
+                    <%= image_tag("main/6.jpg", class: "img-responsive margin-bottom-20", alt: "Kite") %>
                 </div>
                 <div class="col-sm-8">
                     <p>We work with a wide range of customers including:</p>
@@ -131,106 +132,76 @@
         <ul class="slides">
             <li>
                 <a href="#">
-                    <img src="assets/clients/hp_grey.png" alt="" /> 
-                    <img src="assets/clients/hp.png" class="color-img" alt="" />
+                    <%= image_tag("clients/hp_grey.png", alt: "") %>
+                    <%= image_tag("clients/hp.png", class: "color-img", alt: "") %>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="assets/clients/igneus_grey.png" alt="" /> 
-                    <img src="assets/clients/igneus.png" class="color-img" alt="" />
+                    <%= image_tag("clients/igneus_grey.png", alt: "") %>
+                    <%= image_tag("clients/igneus.png", class: "color-img", alt: "") %>                    
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="assets/clients/vadafone_grey.png" alt="" /> 
-                    <img src="assets/clients/vadafone.png" class="color-img" alt="" />
+                    <%= image_tag("clients/vodafone_grey.png", alt: "") %>
+                    <%= image_tag("clients/vodafone.png", class: "color-img", alt: "") %>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="assets/clients/walmart_grey.png" alt="" /> 
-                    <img src="assets/clients/walmart.png" class="color-img" alt="" />
+                    <%= image_tag("clients/walmart_grey.png", alt: "") %>
+                    <%= image_tag("clients/walmart.png", class: "color-img", alt: "") %>                
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="assets/clients/shell_grey.png" alt="" /> 
-                    <img src="assets/clients/shell.png" class="color-img" alt="" />
+                    <%= image_tag("clients/shell_grey.png", alt: "") %>
+                    <%= image_tag("clients/shell.png", class: "color-img", alt: "") %>                                
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="assets/clients/natural_grey.png" alt="" /> 
-                    <img src="assets/clients/natural.png" class="color-img" alt="" />
+                    <%= image_tag("clients/natural_grey.png", alt: "") %>
+                    <%= image_tag("clients/natural.png", class: "color-img", alt: "") %>                                                
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="assets/clients/aztec_grey.png" alt="" /> 
-                    <img src="assets/clients/aztec.png" class="color-img" alt="" />
+                    <%= image_tag("clients/aztec_grey.png", alt: "") %>
+                    <%= image_tag("clients/aztec.png", class: "color-img", alt: "") %>                                                                
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="assets/clients/gamescast_grey.png" alt="" /> 
-                    <img src="assets/clients/gamescast.png" class="color-img" alt="" />
+                    <%= image_tag("clients/gamescast_grey.png", alt: "") %>
+                    <%= image_tag("clients/gamescast.png", class: "color-img", alt: "") %>                                                                                
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="assets/clients/cisco_grey.png" alt="" /> 
-                    <img src="assets/clients/cisco.png" class="color-img" alt="" />
+                    <%= image_tag("clients/cisco_grey.png", alt: "") %>
+                    <%= image_tag("clients/cisco.png", class: "color-img", alt: "") %>                                                                                                
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="assets/clients/everyday_grey.png" alt="" /> 
-                    <img src="assets/clients/everyday.png" class="color-img" alt="" />
+                    <%= image_tag("clients/everyday_grey.png", alt: "") %>
+                    <%= image_tag("clients/everyday.png", class: "color-img", alt: "") %>                                            
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="assets/clients/cocacola_grey.png" alt="" /> 
-                    <img src="assets/clients/cocacola.png" class="color-img" alt="" />
+                    <%= image_tag("clients/cocacola_grey.png", alt: "") %>
+                    <%= image_tag("clients/cocacola.png", class: "color-img", alt: "") %>                                                            
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="assets/clients/spinworkx_grey.png" alt="" /> 
-                    <img src="assets/clients/spinworkx.png" class="color-img" alt="" />
+                    <%= image_tag("clients/spinworkx_grey.png", alt: "") %>
+                    <%= image_tag("clients/spinworkx.png", class: "color-img", alt: "") %>                                                                            
                 </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/clients/shell_grey.png" alt="" /> 
-                    <img src="assets/clients/shell.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/clients/natural_grey.png" alt="" /> 
-                    <img src="assets/clients/natural.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/clients/gamescast_grey.png" alt="" /> 
-                    <img src="assets/clients/gamescast.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/clients/everyday_grey.png" alt="" /> 
-                    <img src="assets/clients/everyday.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/clients/spinworkx_grey.png" alt="" /> 
-                    <img src="assets/clients/spinworkx.png" class="color-img" alt="" />
-                </a>
-            </li>
+            </li>            
         </ul>
     </div><!--/flexslider-->
     <!-- //End Our Clients -->
