--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -57,7 +57,7 @@
             </div>
             <div class="col-md-6">  
                 <a href="/">
-                    <img id="logo-footer" src="assets/logo1-default-white.png" class="pull-right" alt="" />
+                    <%= image_tag("logo1-default-white.png", alt: "Logo",  class: "pull-right", id: "logo-footer") %>
                 </a>
             </div>
         </div><!--/row-->
