--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,7 +11,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <img id="logo-header" src="assets/logo1-default-grey.png" alt="Logo">
+                    <%= image_tag("logo1-default-grey.png", alt: "Logo",  id: "logo-header") %>
                 </a>
             </div>
 
