--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -252,34 +252,34 @@ a.btn-u-lg {
   opacity: 1;
 }
 
-.social_amazon {background: url(icons/social/amazon.png) no-repeat;}
-.social_behance {background: url(icons/social/behance.png) no-repeat;}
-.social_blogger {background: url(icons/social/blogger.png) no-repeat;}
-.social_deviantart {background: url(icons/social/deviantart.png) no-repeat;}
-.social_dribbble {background: url(icons/social/dribbble.png) no-repeat;}
-.social_dropbox {background: url(icons/social/dropbox.png) no-repeat;}
-.social_evernote {background: url(icons/social/evernote.png) no-repeat;}
-.social_facebook {background: url(icons/social/facebook.png) no-repeat;}
-.social_forrst {background: url(icons/social/forrst.png) no-repeat;}
-.social_github {background: url(icons/social/github.png) no-repeat;}
-.social_googleplus {background: url(icons/social/googleplus.png) no-repeat;}
-.social_jolicloud {background: url(icons/social/jolicloud.png) no-repeat;}
-.social_last-fm {background: url(icons/social/last-fm.png) no-repeat;}
-.social_linkedin {background: url(icons/social/linkedin.png) no-repeat;}
-.social_picasa {background: url(icons/social/picasa.png) no-repeat;}
-.social_pintrest {background: url(icons/social/pintrest.png) no-repeat;}
-.social_rss {background: url(icons/social/rss.png) no-repeat;}
-.social_skype {background: url(icons/social/skype.png) no-repeat;}
-.social_spotify {background: url(icons/social/spotify.png) no-repeat;}
-.social_stumbleupon {background: url(icons/social/stumbleupon.png) no-repeat;}
-.social_tumblr {background: url(icons/social/tumblr.png) no-repeat;}
-.social_twitter {background: url(icons/social/twitter.png) no-repeat;}
-.social_vimeo {background: url(icons/social/vimeo.png) no-repeat;}
-.social_wordpress {background: url(icons/social/wordpress.png) no-repeat;}
-.social_xing {background: url(icons/social/xing.png) no-repeat;}
-.social_yahoo {background: url(icons/social/yahoo.png) no-repeat;}
-.social_youtube {background: url(icons/social/youtube.png) no-repeat;}
-.social_vk {background: url(icons/social/vk.png) no-repeat;}
+.social_amazon {background: image-url("icons/social/amazon.png") no-repeat;}
+.social_behance {background: image-url("icons/social/behance.png") no-repeat;}
+.social_blogger {background: image-url("icons/social/blogger.png") no-repeat;}
+.social_deviantart {background: image-url("icons/social/deviantart.png") no-repeat;}
+.social_dribbble {background: image-url("icons/social/dribbble.png") no-repeat;}
+.social_dropbox {background: image-url("icons/social/dropbox.png") no-repeat;}
+.social_evernote {background: image-url("icons/social/evernote.png") no-repeat;}
+.social_facebook {background: image-url("icons/social/facebook.png") no-repeat;}
+.social_forrst {background: image-url("icons/social/forrst.png") no-repeat;}
+.social_github {background: image-url("icons/social/github.png") no-repeat;}
+.social_googleplus {background: image-url("icons/social/googleplus.png") no-repeat;}
+.social_jolicloud {background: image-url("icons/social/jolicloud.png") no-repeat;}
+.social_last-fm {background: image-url("icons/social/last-fm.png") no-repeat;}
+.social_linkedin {background: image-url("icons/social/linkedin.png") no-repeat;}
+.social_picasa {background: image-url("icons/social/picasa.png") no-repeat;}
+.social_pintrest {background: image-url("icons/social/pintrest.png") no-repeat;}
+.social_rss {background: image-url("icons/social/rss.png") no-repeat;}
+.social_skype {background: image-url("icons/social/skype.png") no-repeat;}
+.social_spotify {background: image-url("icons/social/spotify.png") no-repeat;}
+.social_stumbleupon {background: image-url("icons/social/stumbleupon.png") no-repeat;}
+.social_tumblr {background: image-url("icons/social/tumblr.png") no-repeat;}
+.social_twitter {background: image-url("icons/social/twitter.png") no-repeat;}
+.social_vimeo {background: image-url("icons/social/vimeo.png") no-repeat;}
+.social_wordpress {background: image-url("icons/social/wordpress.png") no-repeat;}
+.social_xing {background: image-url("icons/social/xing.png") no-repeat;}
+.social_yahoo {background: image-url("icons/social/yahoo.png") no-repeat;}
+.social_youtube {background: image-url("icons/social/youtube.png") no-repeat;}
+.social_vk {background: image-url("icons/social/vk.png") no-repeat;}
 
 
 /*Font Awesome Icon Page*/
