--- a/app/assets/stylesheets/font-awesome.css.scss
+++ b/app/assets/stylesheets/font-awesome.css.scss
@@ -27,8 +27,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url(<%= asset_path 'font/fontawesome-webfont.eot?v=3.2.1' %>);
-  src: url(<%= asset_path 'font/fontawesome-webfont.eot?#iefix&v=3.2.1' %>) format('embedded-opentype'), url(<%= asset_path 'font/fontawesome-webfont.woff?v=3.2.1' %>) format('woff'), url(<%= asset_path 'font/fontawesome-webfont.ttf?v=3.2.1' %>) format('truetype'), url(<%= asset_path 'font/fontawesome-webfont.svg#fontawesomeregular?v=3.2.1' %>) format('svg');
+  src: font-url('font/fontawesome-webfont.eot?v=3.2.1');
+  src: font-url('font/fontawesome-webfont.eot?#iefix&v=3.2.1') format('embedded-opentype'), font-url('font/fontawesome-webfont.woff?v=3.2.1') format('woff'), font-url('font/fontawesome-webfont.ttf?v=3.2.1') format('truetype'), font-url('font/fontawesome-webfont.svg#fontawesomeregular?v=3.2.1') format('svg');
   font-weight: normal;
   font-style: normal;
 }
