--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -43,7 +43,7 @@
 .purchase {
 	padding: 30px 0;
 	box-shadow: inset 0 0 4px #eee;
-	background: url(breadcrumbs.png) repeat;
+	background: image-url("breadcrumbs.png") repeat;
 }
 .purchase p {
 	margin-bottom: 0;
@@ -557,7 +557,7 @@ a.thumbnail {
 .breadcrumbs {
 	padding: 10px 0 6px;
 	box-shadow: inset 0 0 4px #eee;
-	background: url(breadcrumbs.png) repeat;
+	background: image-url("breadcrumbs.png") repeat;
 }
 .breadcrumbs h1 {
 	color: #686868;
