--- a/app/views/blogs/post.html.erb
+++ b/app/views/blogs/post.html.erb
@@ -15,4 +15,4 @@
     </script>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-<iframe width="700" height="450" src="http://stage.musicjelly.com/recorder"></iframe>
+<iframe width="100%" height="100%" src="http://stage.musicjelly.com/player/"></iframe>
